# python-project-template

./: LICENSE  README.rst  README.ru.rst  cookiecutter.json
{{ cookiecutter.project_name | slugify }}/: LICENSE  README.rst  pyproject.toml
{{ cookiecutter.project_name | slugify }}/.github/workflows/: ci.yml
{{ cookiecutter.project_name | slugify }}/docs/: conf.py  index.rst
{{ cookiecutter.project_name | slugify }}/tests/: test_metainfo.py
